@@ -21,6 +21,7 @@ use Carp;
 use DateTime::Format::Natural;
 use Genealogy::Gedcom::Date 2.01;
 use Params::Get 0.08;
+use Readonly::Values::Months 0.02 qw(@short_month_names);
 use Scalar::Util;
 
 our %months = (
@@ -39,8 +40,6 @@ our %months = (
 	'November' => 'Nov',
 	'December' => 'Dec'
 );
-
-our @short_month_names = ('Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec');
 
 =head1 NAME
 
@@ -170,7 +169,7 @@ sub parse_datetime {
 		}
 		if($date =~ /^\s*(.+\d\d)\s*\-\s*(.+\d\d)\s*$/) {
 			if($date =~ /^(\d{4})\-(\d{2})\-(\d{2})$/) {
-				my $month = $short_month_names[$2 - 1];
+				my $month = ucfirst($short_month_names[$2 - 1]);
 				Carp::carp("Changing date '$date' to '$3 $month $1'") unless($quiet);
 				$date = "$3 $month $1";
 			} else {
